--- a/resources/sass/_recetas.scss
+++ b/resources/sass/_recetas.scss
@@ -3,6 +3,10 @@ body{
     font-family:  $parrafos-font-family;
 }
 
+trix-editor{
+    min-height: 200px;
+}
+
 .bg-primary .navbar-brand{
     color: white;
     font-size: larger;
