--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11290,6 +11290,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+trix-editor {
+  min-height: 200px;
+}
+
 .bg-primary .navbar-brand {
   color: white;
   font-size: larger;
